# dj-grpc-benchmark

./: .gitignore  README.md  generate_ssl_cert.sh  pyproject.toml
base/: books_pb2.py  books_pb2_grpc.py  db.sqlite3  server.py  test.py
base/base/: settings.py  urls.py
base/books/: models.py  serializers.py
base/books/migrations/: 0001_initial.py
base/grpc_server/: apps.py
base/grpc_server/proto/: books.proto  books_pb2.py
base/protobuffers/: books_pb2.py  books_pb2_grpc.py
client/: client.py  pyproject.toml
client/protos/: books_pb2.py  books_pb2_grpc.py
server/: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yml  generate_ssl_cert.sh  pyproject.toml  run.sh  server.py  settings.py  test.py  wsgi.py
server/books/: serializers.py  services.py
server/grpc_server/proto/: books.proto  books_pb2.py  books_pb2_grpc.py
